updated responsive work

--- a/client/src/pages/ForgetPassword/ForgetPassword.css
+++ b/client/src/pages/ForgetPassword/ForgetPassword.css
@@ -33,7 +33,7 @@ body{
     padding-bottom: 9rem;
 }
 
-  form{
+  .forgot-form{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -134,14 +134,13 @@ line-height: 24px;
     place-content: center;
     background:#E5E5E5;
     width: 70%; 
-    min-height: 50vh; 
+    /* min-height: 50%;  */
     /* margin: 20px; */
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
     /* padding: 13rem 8rem; */
   }
 
   .parentdiv{
-    height: max-content;
     width:100%;
     background: #fff;
     position: relative;
@@ -214,7 +213,7 @@ line-height: 24px;
   
   ::placeholder{
     color: #C4C4C4;
-    width: 111px;
+  width: 111px;
   height: 24px;
   font-family: 'Helvetica Neue';
   font-style: normal;
@@ -232,8 +231,9 @@ line-height: 24px;
 
   .bck_btn{
     display: flex;
-    
-  
+    width: 10%;
+    height: 20%px;
+
   }
   
   
