--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -1,9 +1,9 @@
-.login,
-.login * {
+.login-container,
+.login-container * {
   box-sizing: border-box;
 }
 
-.login {
+.login-container{
   background: #f5f5f5;
   width: 1440px;
   height: 1024px;
@@ -53,22 +53,26 @@
   body {
     padding: 1rem;
   }
-
- 
-
+h2{
+  margin-left: 50px;
+}
+input{
+  width: 20px;
+  height: 100px;
+}
   .login {
     background: #f5f5f5;
     width: 100%;
     height: 100%
-    /* position: relative; */
-    /* overflow: hidden; */
 
   }
-
+  .login-container{
+    width: auto;
+    height: auto;
+  }
   .login-card {
     display: flex;
     flex-direction: column;
-    /* gap: 20px; */
     align-items: center;
     justify-content: flex-start;
     position: relative;
@@ -80,8 +84,6 @@
     background: #ffffff;
     padding: 80px 80px 80px 80px;
     display: flex;
-    /* flex-direction: column; */
-    /* gap: 40px; */
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
