--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -1,3 +1,4 @@
+
 import
 
 .signup,
@@ -5,11 +6,11 @@ import
         box-sizing: border-box;
 }
 
-body{
+/* body{
 
-    background-color:#f7f7f7;
-}
-button{
+     background-color:#f7f7f7; 
+} */
+.submit-btn{
 display: flex;
 flex-direction: row;
 justify-content: center;
@@ -74,7 +75,7 @@ flex-grow: 0;
     position: relative;
     width: 100%;
     height: 100%;
-    background: rgb(245, 245, 245)
+    /* background: rgb(245, 245, 245) */
 }
 .signup-card {
  position: relative;
@@ -84,7 +85,7 @@ flex-grow: 0;
  display: flex;
  justify-content: center;
  align-items: center;
- background: #FFFFFF;
+ background: #FFFFFF; 
  margin: 10% 0% 10% 0%;
  width: 745px;
  height: Hug(936);
@@ -136,7 +137,7 @@ flex-grow: 0;
         }
 .signup-card{
         width:5px;
-        margin:400px 10px 20px 20px;
+        margin:400px 10px;
         padding: 0;
         height: 20px;
     }
