--- a/client/src/components/utils/Input/Input.css
+++ b/client/src/components/utils/Input/Input.css
@@ -30,3 +30,11 @@
         font: 400 16px 'Inter';
         position: relative;
 }
+
+@media only screen and (max-width: 600px) {
+.input{
+        height:35px;
+        width: 200px;
+}
+
+}
