--- a/client/src/pages/ForgetPassword/ForgetPassword.css
+++ b/client/src/pages/ForgetPassword/ForgetPassword.css
@@ -116,7 +116,7 @@ label{
 
 ::placeholder{
   color: #C4C4C4;
-  width: 111px;
+  /* width: 111px; */
 height: 24px;
 font-family: 'Helvetica Neue';
 font-style: normal;
