--- a/client/src/components/utils/Input/Input.css
+++ b/client/src/components/utils/Input/Input.css
@@ -8,10 +8,11 @@
         gap: 10px;
         align-items: center;
         justify-content: flex-start;
-        flex-shrink: 0;
-        width: 320px;
+        /* flex-shrink: 0; */
+        width: 100%;
         height: 48px;
-        position: relative;
+        /* position: relative; */
+        box-sizing: border-box;
 }
 
 .input-group {
@@ -25,16 +26,17 @@
         margin-bottom: 20px;
 }
 .input-label {
-        color: #21334f;
+        color: #21334F;
         text-align: left;
-        font: 400 16px 'Inter';
+        font-size: 12px;
+        border: 2px solid red;
         position: relative;
 }
 
 @media only screen and (max-width: 600px) {
 .input{
         height:35px;
-        width: 200px;
+        /* width: 200px; */
 }
 
 }
