--- a/client/src/components/dashboard/dashboard.css
+++ b/client/src/components/dashboard/dashboard.css
@@ -37,7 +37,7 @@
     margin-left: 27.5%;
     margin-top: 10%;
     background: #FFFFFF;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 
 .dashboard {
@@ -122,10 +122,12 @@ background-color: #DE3D6D;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
-    gap: 26px;
+    padding-top: 25px;
+    padding-bottom: 0px;
+    gap: 15px;
+    font-size: 15px;
     width: 100%;
-    height: 21px;
+    height: 10px;
     flex: none;
     order: 1;
     flex-grow: 0;
@@ -152,7 +154,14 @@ background-color: #DE3D6D;
     justify-content: space-between;
     border-radius: 2rem;
     padding-left: 0px;
-    text-decoration: underline red 2px;
+}
+
+.mock:hover {
+    text-decoration: underline#DE3D6D 2px;
+}
+
+.test:active {
+    text-decoration: underline#DE3D6D 1px;
 }
 
 ul.nav li {
@@ -180,9 +189,10 @@ ul.nav li:last-child {
     border-top-right-radius: 2rem;
 }
 
-ul.nav li.active:hover {
+
+/* ul.nav li.active:hover {
     text-decoration: underline red 2px;
-}
+} */
 
 .TabContent {
     font-size: 2rem;
@@ -260,15 +270,15 @@ ul.nav li.active:hover {
 
 @media screen and (max-width: 280px) {
     .nav {
-        margin: 2px 2px 2px 49px;
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 37px;
+        /* margin: 2px 2px 2px 49px; */
         font-size: 10px;
         gap: 10px;
     }
     .rectangle2 {
         max-width: 107%;
-    }
-    .nav {
-        display: flex;
     }
     h1 {
         font-size: 20px;
