--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,14 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
 
-  margin: 0;
+  /* margin: 0; */
   font-family: 'Inter', sans-serif;
   /* box-sizing: border-box; */
   
